feat: scaled requests to 1 MILLION using virtual threads